--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://github.com/MattiSG/wd-element.git"
   },
+  "scripts": {
+    "test": "node_modules/.bin/mocha test --timeout 5000"
+  },
   "engines": {
     "node": ">0.6"
   },
