--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/MattiSG/wd-element.git"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha test --timeout 5000"
+    "test": "node_modules/.bin/mocha test --reporter spec --growl"
   },
   "engines": {
     "node": ">0.6"
